--- a/k8s/colibri.yml
+++ b/k8s/colibri.yml
@@ -38,10 +38,10 @@ spec:
       - name: cpu-grabber
         image: grabber:latest
         imagePullPolicy: Never
-        command: ["metrics-grabber", "--pid", "$(PID)", "--out", "$(OUTPUT)"]
+        command: ["colibri", "--pid", "$(PID)", "--out", "$(OUTPUT)", "--freq", "10",]
         env:
         - name: PID
-          value: "1234"
+          value: "APP_PID"
         - name: OUTPUT
           value: app
         volumeMounts:
@@ -51,35 +51,19 @@ spec:
           name: cgroup-dir
         - mountPath: /output
           name: output
-      - name: mem-grabber
-        image: grabber:latest
-        imagePullPolicy: Never
-        command: ["metrics-grabber", "--pid", "$(PID)", "--out", "$(OUTPUT)", "--mtype", "mem"]
-        env:
-        - name: PID
-          value: "1234"
-        - name: OUTPUT
-          value: app
-        volumeMounts:
-        - mountPath: /tmp/proc
-          name: proc-dir
-        - mountPath: /tmp/cgroup
-          name: cgroup-dir
-        - mountPath: /output
-          name: output
+        # example of a specific metrics grabber
       - name: net-grabber
         image: grabber:latest
         imagePullPolicy: Never
-        command: ["metrics-grabber", "--pid", "$(PID)", "--out", "$(OUTPUT)", "--mtype", "net"]
+        command: ["colibri", "--pid", "$(PID)", "--out", "$(OUTPUT)", "--mtype", "net", "--iface", "eno1"]
         env:
         - name: PID
-          value: "1234"
+          value: "APP_PID"
         - name: OUTPUT
-          value: app
+          value: none
         volumeMounts:
         - mountPath: /tmp/proc
           name: proc-dir
         - mountPath: /tmp/cgroup
           name: cgroup-dir
         - mountPath: /output
-          name: output
